# logger

./: .gitignore  .gitmodules  LICENSE  log_config.json  pyproject.toml  readme.md  requirements.txt
lib/logger/: formatters.py  logger.py  lookuper.py
src/logger/: __init__.py  formatters.py  logger.py  lookuper.py
