[project]
name = "logger"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "json-helpers",
]


[dependency-groups]
dev = [
    "black==25.12.0",
    "isort==7.0.0",
]


[tool.isort]
profile = "black"
extend_skip_glob = []
skip_gitignore = true
line_length = 120
atomic = true
lines_after_imports = 2
combine_as_imports = true
force_sort_within_sections = true
color_output = true


[tool.black]
line-length = 120
extend-exclude = '''
(
  .venv
)
'''


[tool.setuptools.dynamic]
version = {attr = "logger.__version__"}

[tool.uv.sources]
json-helpers = { git = "https://github.com/3elenyi-Kaktus/json-helpers.git", rev = "v2.0.1"}

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
